	  device/lib/_divslonglong_rrx_s.c,
	  device/lib/_rrslonglong_rrx_s.c,
	  support/regression/tests/gcc-torture-execute-20101013-1.c,
	  support/regression/tests/gcc-torture-execute-950512-1.c:
	  long long division.
	* support/regression/tests/gcc-torture-execute-920612-1.c,
	  support/regression/tests/gcc-torture-execute-920711-1.c:
	  Disable tests for gcc older than 5.0.
	* support/regression/tests/longlong.c:
	  Disable longlong test for gbz80, since it fails on 32-bit systems.

2012-03-31 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c, src/SDCCgen.h, src/ds390/gen.c,
	  src/ds390/main.c, src/hc08/gen.c, src/hc08/main.c,
	  src/mcs51/gen.c, src/pic14/gen.c, src/pic16/gen.c,
	  src/z80/gen.c, src/z80/gen.h:
	  introduced labelKey2num label handling macro

2012-03-30 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, src/Makefile.in, src/SDCCgen.c, src/SDCCgen.h,
	  src/SDCCasm.c, src/SDCCasm.h, src/SDCCdebug.c,
	  src/SDCCdebug.h, src/SDCCpeeph.c, src/SDCCpeeph.h,
	  src/avr/gen.c, src/ds390/gen.c, src/ds390/gen.h,
	  src/ds390/main.c, src/ds390/main.h, src/hc08/gen.c,
	  src/mcs51/gen.c, src/mcs51/main.c, src/mcs51/main.h,
	  src/pic14/gen.c, src/pic16/gen.c, src/z80/gen.c:
	  unification of target code generation

2012-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z180/stubs.s,
	  device/lib/z80/stubs.s,
	  device/lib/gbz80/stubs.s,
	  support/regression/tests/longlong.c,
	  support/regression/tests/gcc-torture-execute-*.c:
	  Made TODO comments more specific wrt. to what sdcc functionality is required for enabling the test, enabled more long long tests.

2012-03-30 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, sdccconf_in.h:
	  added check if c supports tags in unnamed struct,
	  fixed IS_VALID_OPTION
	* sim/ucsim/configure.in, sim/ucsim/configure:
	  fixed IS_VALID_OPTION
	* sim/ucsim/aclocal.m4: regenerated
	* src/pic14/Makefile.in: removed unneeded PORT

2012-03-30 Philipp Klaus Krause <pkk AT spth.de>
